--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
         <a name="mergeo"></a>
         <h3 class="sm-pad-top"><strong><a href="https://mergeo.com" title="MerGeo">Meridian Geographics (MerGeo)</a></strong></h3>
 
-        <p>I directed a complete rebranding and website resdesign at MerGeo. While working with the Web Developer that we'd hired, I realized that I wanted to more of his job than a client really should; and that's what lead me to become a UX Designer!<br></br><a href="http://nwtrailruns.com/" title="nwtrailruns.com">nwtrailruns.com</a><br></br><a href="http://streetscramble.com/" title="streetscramble.com">streetscramble.com</a><br></br><a href="http://navraces.com/" title="navraces.com">navraces.com</a></p>
+        <p>I directed a complete rebranding and website resdesign at MerGeo. While working with the Web Developer that we'd hired, I realized that I wanted to do more of his job than a client really should; and that's what lead me to become a UX Designer!<br></br><a href="http://nwtrailruns.com/" title="nwtrailruns.com">nwtrailruns.com</a><br></br><a href="http://streetscramble.com/" title="streetscramble.com">streetscramble.com</a><br></br><a href="http://navraces.com/" title="navraces.com">navraces.com</a></p>
 
         <img src="images/mergeo-logos.png" alt="MerGeo logos" class="img-responsive border sm-mrg-top">
 
