resume pdf and copyright update

--- a/rebeccajensen.html
+++ b/rebeccajensen.html
@@ -51,9 +51,15 @@
           <p><a href="contact.html" title="Contact me">Contact me</a></p>
         </div>
  
-
     </div>
   </div>
+
+  <div class="row md-pad-top">
+    <p class="text-center fineprint">Designed and built by Rebecca Jensen, using <a href="http://getbootstrap.com/">Bootstrap</a>. &copy; <span id="copyright"></span>
+    </p>
+  </div>
+
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
