Flexbox and mobile dropdown menu

--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Rebecca Jensen - Resume</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS -->
     <link href="css/style.css" rel="stylesheet">
 
     <!--Google Fonts -->
@@ -27,168 +26,197 @@
 
 
   <!-- NAVIGATION -->
-  <nav class="navigation">
-    <ul class="text-center">
-      <li><a href="rebeccajensen.html" title="Welcome">Welcome</a></li>
-      <li><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
-      <li><a href="resume.html" id="current" title="Resume">Resume</a></li>
-      <li><a href="contact.html" title="Contact">Contact</a></li>
+  <nav class="navigation sm-mrg-bottom">
+    <ul class="menu">
+      <li class="home"><a href="index.html" id="orange" title="Home">Rebecca Jensen</a></li>
+      <li class="menu-item"><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
+      <li class="menu-item"><a href="resume.html" id="current" title="Resume">Resume</a></li>
+      <li class="menu-item"><a href="contact.html" title="Contact">Contact</a></li>
+      <li class="menu-burger">
+        <span class="line-1"></span>
+        <span class="line-2"></span>
+        <span class="line-3"></span>
+      </li>
+    </ul>
+    <ul class="mobile-menu">
+      <li class="menu-item"><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
+      <li class="menu-item"><a href="resume.html" title="Resume">Resume</a></li>
+      <li class="menu-item"><a href="contact.html" title="Contact">Contact</a></li>
     </ul>
   </nav>
 
   <!-- MAIN CONTENT -->
-  <div class="row">
-    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 lg-pad-top col-xs-12 lg-pad-bottom">
 
-        <p><a href="images/rebeccajensen-resume.pdf" title="Print Resume">Printable PDF</a></p>
+  <div class="resume-div lg-pad-bottom">
+    <div class="sm-pad">
 
-        <h1 class="sm-mrg-top">Rebecca Jensen</h1>
-        <h3>UX/UI Designer</h3>
-        <p>Seattle, WA</p>
+      <h1>Rebecca Jensen</h1>
+      <h3>UX/UI Designer</h3>
+      <p>Seattle, WA</p>
+      <p><a href="images/rebeccajensen-resume.pdf" title="Print Resume">Printable PDF</a></p>
 
-  <!-- EXPERIENCE -->
-        <h3 class="sm-pad-top"><strong>EXPERIENCE</strong></h3>
-        <hr></hr>
-        
-        <h4><strong>UX/UI Designer</strong></h4>
-        <p><a href="https://motion.social" title="motion.social">motion.social</a>, Seattle, WA
-        <br>July 2015 - Present
-        </p>
+<!-- CURRENT -->
+    <h3 class="sm-pad-top"><strong>WHAT I'M CURRENTLY UP TO</strong></h3>
+    <hr></hr>
 
-        <p>Motion.social is an online tool for organizing group fitness activities. As the sole Designer, I was responsible for designing the entire product, from ideation to iteration.</p>
-
-        <p><b>Responsibilities</b></p>
-        <ul>
-          <li>Interviewed target users</li>
-            <ul>
-              <li>Identified planning as a common goal and pain point</li>
-              <li>Created user personas to maintain design focus</li>
-            </ul>
-          <li>Developed the product</li>
-            <ul>
-              <li>Translated larger concepts into concrete features</li>
-              <li>Outlined user flow and site map</li>
-            </ul>
-          <li>Designed the visuals</li>
-            <ul>
-              <li>Developed branding voice and style to fit our fitess focus</li>
-              <li>Designed user interface, considering responsive displays and best practices</li>
-            </ul>
-          <li>Iterated</li>
-            <ul>
-              <li>Followed up with users to identify areas of improvement</li>
-              <li>Used quick prototypes to test ideas</li>
-            </ul>
-          <li>Directed</li>
-            <ul>
-              <li>Proposed new features and next steps, prioritizing for impact on the user</li>
-            </ul>
-          <li>Adjusted</li>
-            <ul>
-              <li>Self-directed work, managing multiple design threads</li>
-            </ul>
-        </ul>
-
-        <p><a href="portfolio.html#motionsocial" title="work samples">See work samples</a></p>
-
-        <h4 class="sm-pad-top"><strong>UX/UI Designer (volunteer)</strong></h4>
-        <p><a href="https://cascadeoc.org" title="Cascade Orienteering Club">Cascade Orienteering Club</a>, Seattle, WA
-        <br>December 2014 - Present
-        </p>
-
-        <p>Cascade Orienteering Club is a non-profit organization for orienteering events and education. I undertook a complete website overhaul, doing everything from user research to writing a Wordpress theme from scratch.</p>
-
-        <ul>
-          <li>Surveyed and interviewed current and target users, identified goals and frustrations</li>
-          <li>Created user personas</li>
-          <li>Outlined user flows and site map</li>
-          <li>Wireframed and prototyped design solutions</li>
-          <li>Designed user interface</li>
-          <li>Wrote Wordpress theme (PHP) from scratch</li>
-          <li>Launched a user-oriented, responsive Wordpress site</li>
-        </ul>
-
-        <p><a href="portfolio.html#cascadeoc" title="work samples">See work samples</a></p>
-
-        <h4 class="sm-pad-top"><strong>Marketing Manager</strong></h4>
-        <p><a href="https://mergeo.org" title="MerGeo">Meridian Geographics (MerGeo)</a>, Seattle, WA
-        <br>December 2012 - May 2015
-        </p>
-
-        <p>MerGeo produces running and navigation events year-round in Washington State. In addition to ongoing marketings tasks, I directed a complete rebranding, through logo and website redesign.</p>
-
-        <ul>
-          <li>Rebranded MerGeo through logo and website redesign</li>
-          <li>Surveyed event participants, analyzed feedback to identify ways to improve participants' experience</li>
-          <li>Analyzed web traffic, registration, e-newsletter, and social media data</li>
-          <li>Designed promotional print and web graphics</li>
-          <li>Wrote website content, newsletters, press releases</li>
-          <li>Managed social media presence</li>
-          <li>Filmed and edited promotional videos</li>
-        </ul>
-
-        <p>See websites: <a href="http://nwtrailruns.com/" title="nwtrailruns.com">nwtrailruns.com</a>, <a href="http://streetscramble.com/" title="streetscramble.com">streetscramble.com</a>, <a href="http://navraces.com/" title="navraces.com">navraces.com</a></p>
-
-        <h4 class="sm-pad-top"><strong>Sales Manager</strong></h4>
-        <p>Gregg's Bellevue Cycles, Bellevue, WA
-        <br>2011 - 2013
-
-        <ul>
-          <li>Managed a staff of 20+ employees</li>
-        </ul> 
-        </p>
-
-        <h4 class="sm-pad-top"><strong>Sales Person</strong></h4>
-        <p>Gregg's Bellevue Cycles, Bellevue, WA
-        <br>2009 - 2011
-
-        <ul>
-          <li>Managed a staff of 20+ employees</li>
-        </ul> 
-
-  <!-- EDUCATION -->
-        <h3 class="sm-pad-top"><strong>EDUCATION</strong></h3>
-        <hr></hr>
-
-        <p><b>BLOC</b>, UX Design, 2014 - 2015</p>
-        <p><b>Whitman College</b>, Studio Art Major, 2003 - 2007</p>
-
-  <!-- SOFTWARE/LANGUAGES -->
-        <h3 class="sm-pad-top"><strong>SOFTWARE &amp; LANGUAGES</strong></h3>
-        <hr></hr>
-
-        <ul>
-          <li>Sketch</li>
-          <li>Photoshop</li>
-          <li>Illustrator</li>
-          <li>InVision</li>
-          <li>Omnigraffle</li>
-          <li>Google Forms</li>
-          <li>HTML 5 / CSS 3</li>
-          <li>PHP</li>
-          <li>jQuery</li>
-          <li>Bootstrap</li>
-          <li>Wordpress</li>
-          <li>iMovie</li>
-          <li>FinalCut</li>
-        </ul>
-
-  <!-- REFERENCES -->
-        <h3 class="sm-pad-top"><strong>REFERENCES</strong></h3>
-        <hr></hr>
-
-        <p><a href="images/rebeccajensen-resume.pdf" title="See Resume PDF"><i>See Resume PDF</i></a></p>
+    <p>I am currently expanding and deepening my programming knowledge, focusing on languages that affect user interaction. This enables me to build more of my own ideas, and to become an even more well-informed Designer.
+    </p>      
+    <br>
 
 
+<!-- EXPERIENCE -->
+      <h3 class="sm-pad-top"><strong>EXPERIENCE</strong></h3>
+      <hr></hr>
+      
+      <h4><strong>UX/UI Designer</strong></h4>
+      <p>motion.social, Seattle, WA - <a href="https://motion.social" title="motion.social">Visit site</a>
+      <br></br>July 2015 - April 2017
+      </p>
 
-    </div>
-  </div>
+      <p>Motion.social is an online tool for organizing group fitness activities. As the sole Designer, I was responsible for designing the entire product, from ideation to iteration.</p>
+
+      <p><b>Responsibilities</b></p>
+      <ul>
+        <li>Interviewed target users</li>
+          <ul>
+            <li>Identified planning as a common goal and pain point</li>
+            <li>Created user personas to maintain design focus</li>
+          </ul>
+        <li>Developed the product</li>
+          <ul>
+            <li>Translated larger concepts into concrete features</li>
+            <li>Outlined user flow and site map</li>
+          </ul>
+        <li>Designed the visuals</li>
+          <ul>
+            <li>Developed branding voice and style to fit our fitess focus</li>
+            <li>Designed user interface, considering responsive displays and best practices</li>
+          </ul>
+        <li>Iterated</li>
+          <ul>
+            <li>Followed up with users to identify areas of improvement</li>
+            <li>Used quick prototypes to test ideas</li>
+          </ul>
+        <li>Directed</li>
+          <ul>
+            <li>Proposed new features and next steps, prioritizing for impact on the user</li>
+          </ul>
+        <li>Adjusted</li>
+          <ul>
+            <li>Self-directed work, managing multiple design threads</li>
+          </ul>
+      </ul>
+
+      <p><a href="portfolio.html#motionsocial" title="work samples">See work samples</a></p>
+      <a name="cascade"></a>
+      <h4 class="sm-pad-top"><strong>UX/UI Designer (volunteer)</strong></h4>
+      <p>Cascade Orienteering Club, Seattle, WA - <a href="https://cascadeoc.org" title="Cascade Orienteering Club">Visit Site</a>
+      <br>December 2014 - Present
+      </p>
+
+      <p>Cascade Orienteering Club is a non-profit organization for orienteering events and education. I undertook a complete website overhaul, doing everything from user research to writing a Wordpress theme from scratch.</p>
+
+      <ul>
+        <li>Surveyed and interviewed current and target users, identified goals and frustrations</li>
+        <li>Created user personas</li>
+        <li>Outlined user flows and site map</li>
+        <li>Wireframed and prototyped design solutions</li>
+        <li>Designed user interface</li>
+        <li>Wrote Wordpress theme (PHP) from scratch</li>
+        <li>Launched a user-oriented, responsive Wordpress site</li>
+      </ul>
+
+      <p><a href="portfolio.html#cascadeoc" title="work samples">See work samples</a></p>
+
+      <h4 class="sm-pad-top"><strong>Marketing Manager</strong></h4>
+      <p>Meridian Geographics (MerGeo), Seattle, WA - <a href="https://mergeo.org" title="MerGeo">Visit Site</a>
+      <br>December 2012 - May 2015
+      </p>
+
+      <p>MerGeo produces running and navigation events year-round in Washington State. In addition to ongoing marketings tasks, I directed a complete rebranding, through logo and website redesign.</p>
+
+      <ul>
+        <li>Rebranded MerGeo through logo and website redesign</li>
+        <li>Surveyed event participants, analyzed feedback to identify ways to improve participants' experience</li>
+        <li>Analyzed web traffic, registration, e-newsletter, and social media data</li>
+        <li>Designed promotional print and web graphics</li>
+        <li>Wrote website content, newsletters, press releases</li>
+        <li>Managed social media presence</li>
+        <li>Filmed and edited promotional videos</li>
+      </ul>
+
+      <p>See websites: <a href="http://nwtrailruns.com/" title="nwtrailruns.com">nwtrailruns.com</a>, <a href="http://streetscramble.com/" title="streetscramble.com">streetscramble.com</a>, <a href="http://navraces.com/" title="navraces.com">navraces.com</a></p>
+
+      <h4 class="sm-pad-top"><strong>Sales Manager</strong></h4>
+      <p>Gregg's Bellevue Cycles, Bellevue, WA
+      <br>2011 - 2013
+
+      <ul>
+        <li>Managed a staff of 20+ employees</li>
+      </ul> 
+      </p>
+
+      <h4 class="sm-pad-top"><strong>Sales Person</strong></h4>
+      <p>Gregg's Bellevue Cycles, Bellevue, WA
+      <br>2009 - 2011
+
+      <ul>
+        <li>Managed a staff of 20+ employees</li>
+      </ul> 
+
+<!-- EDUCATION -->
+      <h3 class="sm-pad-top"><strong>EDUCATION</strong></h3>
+      <hr></hr>
+
+      <p><b>BLOC</b>, UX Design, 2014 - 2015</p>
+      <p><b>Whitman College</b>, Studio Art Major, 2003 - 2007</p>
+
+<!-- SOFTWARE/LANGUAGES -->
+      <h3 class="sm-pad-top"><strong>SOFTWARE &amp; LANGUAGES</strong></h3>
+      <hr></hr>
+
+      <h4>Software</h4>
+      <ul>
+        <li>Sketch</li>
+        <li>Photoshop</li>
+        <li>Illustrator</li>
+        <li>InVision</li>
+        <li>Omnigraffle</li>
+        <li>Google Forms</li>
+        <li>iMovie</li>
+        <li>FinalCut</li>
+      </ul>
+      <br>
+      <h4>Languages</h4>
+      <ul>
+        <li>HTML 5 / CSS 3</li>
+        <li>Bootstrap</li>
+        <li>PHP / Wordpress</li>
+        <li>jQuery</li>
+        <li>JavaScript</li>
+      </ul>
+      <br>
+      <p><a href="https://github.com/TalusRocks" title="my GitHub account">See my work on GitHub</a></p>
+
+<!-- REFERENCES -->
+      <h3 class="sm-pad-top"><strong>REFERENCES</strong></h3>
+      <hr></hr>
+
+      <p><a href="images/rebeccajensen-resume.pdf" title="See Resume PDF"><i>Available in Resume PDF</i></a></p>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    </div> <!-- sm pad -->
+  </div> <!-- flex container -->
+
+
+
+  <!-- jQuery -->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <!-- my JavaScript -->
+  <script src="js/rebecca.js"></script>
   </body>
 </html>
 
