--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- NAVIGATION -->
   <nav class="navigation">
     <ul class="menu">
-      <li class="home"><a href="index.html" id="orange" title="Home">Rebecca Jensen</a></li>
+      <li class="home"><a href="index.html" title="Home">Rebecca Jensen</a></li>
       <li class="menu-item"><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
       <li class="menu-item"><a href="resume.html" title="Resume">Resume</a></li>
       <li class="menu-item"><a href="contact.html" title="Contact">Contact</a></li>
@@ -59,13 +59,16 @@
         <div class="welcome-text">
           <h1>Rebecca Jensen</h1>
           <h2>UX/UI Designer</h2>
-          <p>I’m a UX/UI Designer because I love asking questions and making things better. To me, being a Designer is not about having the best answer, but being committed to <i>finding</i> it. 
-          <br></br>My UX experience so far has been as the sole Designer on a project, affording me the opportunity to tackle the whole UX spectrum, from research and product design to detailing UI and ongoing iteration. 
-          <br></br>I am a voracious learner, both in work and hobby (just ask my board game collection). I take UX principles to heart, and have been fortunate enough to always be working on something I’m genuinely engaged with. 
-          <br></br>Am I match for your company? I’m currently looking for full-time role where I can work in a small team, with a positive work culture, and other Designers who are as excited to explore as I am.
+          <p class="sm-mrg-top">
+            I'm empathetic, articulate, and enjoy problem solving as recreation. Most of all, I love constantly learning, a required trait for a field that's always evolving.
           </p>
-          <br>
-          <p><a href="contact.html" title="Contact me">Contact me!</a></p>
+          <p>
+            My experience so far has been as the principal Designer, whether UX, UI, or visual. Sometimes I develop the front-end too.
+          </p>
+          <p>
+            Are you looking for someone be the link between UX, UI, and devolopment? I am currently seeking a full-time role where I can work with people who are as excited to explore as I am. If you think we might be a match, <a href="contact.html" title="Contact me">contact me!</a>
+          </p>
+
         </div>
  
     </div>
@@ -81,7 +84,10 @@
         document.write(intYear);
       </script>
     </span>
+    <br><br>
+    See my code on <a href="https://github.com/TalusRocks">GitHub</a>
     </p>
+    
   </footer>
 
 
