--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
   <!-- NAVIGATION -->
   <nav class="navigation sm-mrg-bottom">
     <ul class="menu">
-      <li class="home"><a href="index.html" id="orange" title="Home">Rebecca Jensen</a></li>
+      <li class="home"><a href="index.html" title="Home">Rebecca Jensen</a></li>
       <li class="menu-item"><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
       <li class="menu-item"><a href="resume.html" id="current" title="Resume">Resume</a></li>
       <li class="menu-item"><a href="contact.html" title="Contact">Contact</a></li>
